<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="32dp"
    android:layout_marginTop="50dp"
    android:background="@color/background_light"
    tools:context=".ChangePasswordActivity">

    <ImageView
        android:id="@+id/profile"
        android:layout_width="197dp"
        android:layout_height="118dp"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/wallet_logo_description"
        android:src="@drawable/change_ps" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_password_title"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textColor="@color/text_primary"
        android:layout_marginBottom="32dp"/>

    <EditText
        android:id="@+id/et_current_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/current_password_hint"
        android:inputType="textPassword"
        android:layout_marginBottom="16dp"
        android:padding="14dp"
        android:background="@drawable/rounded_edittext_bg" />

    <EditText
        android:id="@+id/et_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_password_hint"
        android:inputType="textPassword"
        android:layout_marginBottom="16dp"
        android:padding="14dp"
        android:background="@drawable/rounded_edittext_bg" />

    <EditText
        android:id="@+id/et_confirm_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_new_password_hint"
        android:inputType="textPassword"
        android:layout_marginBottom="32dp"
        android:padding="14dp"
        android:background="@drawable/rounded_edittext_bg" />

    <Button
        android:id="@+id/btn_change_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_password_button"
        android:paddingVertical="14dp"
        android:backgroundTint="@color/green_button"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textSize="16sp"
        app:cornerRadius="12dp" />

</LinearLayout>
