<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ReportActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/report_page_title"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="16dp">
        <Spinner
            android:id="@+id/spinner_month_filter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:prompt="@string/prompt_select_month" />
        <Spinner
            android:id="@+id/spinner_year_filter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="8dp"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/expense_summary_title"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginBottom="8dp"/>

    <com.github.mikephil.charting.charts.PieChart
        android:id="@+id/pie_chart_expense"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginBottom="16dp"
        android:background="@android:color/white"/>

    <TextView
        android:id="@+id/tv_no_chart_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_expense_chart_data"
        android:gravity="center"
        android:textSize="16sp"
        android:textStyle="italic"
        android:visibility="gone" />

</LinearLayout>
